Add AFI problem 11.11.1.2

--- a/Code/Algorithms/Books/AlgorithmsForInterviews/11e1_programming-languages_basics.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/11e1_programming-languages_basics.yml
@@ -29,3 +29,12 @@ notes:
       What are the basic types? How many bits does it take to represent them
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 93.
+
+
+- fields:
+    Front: |
+      ## 11.11.1.02: Programming languages --- basics
+
+      What do floating-point numbers look like in memory? Specifically, how many bits are there, and what sequence do the bits appear in?
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 93.
