--- a/Code/Algorithms/Books/AlgorithmsForInterviews/11e1_programming-languages_basics.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/11e1_programming-languages_basics.yml
@@ -77,3 +77,13 @@ notes:
       What do composite objects look like in memory?
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 93.
+
+
+- modelName: BasicMathJax
+  fields:
+    Front: |
+      ## 11.11.1.07: Programming languages --- basics
+
+      What is the difference between an interpreted and a compiled language?
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 93.
