Add AFI problem 11.11.1.14

--- a/Code/Algorithms/Books/AlgorithmsForInterviews/11e1_programming-languages_basics.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/11e1_programming-languages_basics.yml
@@ -145,3 +145,13 @@ notes:
       Your manager reads an online article that says it is ten times faster to code in Python than in C++. He wants you to code exclusively in Python from now on. What would you say to him?
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 93.
+
+
+- modelName: BasicMathJax
+  fields:
+    Front: |
+      ## 11.11.1.14: Programming languages --- basics
+
+      What does an executable look like as a sequence of bytes?
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 93.
