--- a/Code/Algorithms/Books/AlgorithmsForInterviews/11e2_programming-languages_libraries.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/11e2_programming-languages_libraries.yml
@@ -20,3 +20,12 @@ defaults:
 
 
 notes:
+
+
+- fields:
+    Front: |
+      ## 11.11.2.01: Programming languages --- libraries
+
+      Give an example of a function in the standard library.
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 94.
