Add AFI problem 11.11.2.2

--- a/Code/Algorithms/Books/AlgorithmsForInterviews/11e2_programming-languages_libraries.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/11e2_programming-languages_libraries.yml
@@ -29,3 +29,12 @@ notes:
       Give an example of a function in the standard library.
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 94.
+
+
+- fields:
+    Front: |
+      ## 11.11.2.02: Programming languages --- libraries
+
+      Give an example of a commonly-used function not in the standard library.
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 94.
