--- a/Code/Algorithms/Books/AlgorithmsForInterviews/11e2_programming-languages_libraries.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/11e2_programming-languages_libraries.yml
@@ -56,3 +56,12 @@ notes:
       What library would you use if you had to implement a tinyurl service?
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 94.
+
+
+- fields:
+    Front: |
+      ## 11.11.2.05: Programming languages --- libraries
+
+      How are sets implemented?
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 94.
