--- a/Code/Algorithms/Books/AlgorithmsForInterviews/11f_programming_debugging-and-testing.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/11f_programming_debugging-and-testing.yml
@@ -72,3 +72,13 @@ notes:
       How do unit testing libraries make the process of testing easier?
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 94.
+
+
+- modelName: CodingProblems
+  fields:
+    Front: |
+      ## 11.12.07: Debugging and testing
+
+      List five ways in which code can be nonportable. What can you do to make the code portable?
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 94.
