--- a/Code/Algorithms/Books/AlgorithmsForInterviews/11f_programming_debugging-and-testing.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/11f_programming_debugging-and-testing.yml
@@ -101,3 +101,12 @@ notes:
       Should you test private methods? Should you test one-line methods?
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 94.
+
+
+- fields:
+    Front: |
+      ## 11.12.10: Debugging and testing
+
+      If you find and fix an error by adding debug code, should you remove the debug code afterwards? Should you leave them in with a conditional compilation/runtime flag?
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 94.
