Add AFI problem 11.14.1

--- a/Code/Algorithms/Books/AlgorithmsForInterviews/11h_programming_language-implementation.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/11h_programming_language-implementation.yml
@@ -19,3 +19,19 @@ defaults:
 
 
 notes:
+
+
+- fields:
+    Front: |
+      ## 11.14.01: Programming Language Implementation
+
+      Give an example of a language which cannot be parsed by any computer.
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 95.
+
+    Thoughts: |
+      I'm stumped. My snarky response is "body language", but I think it may be possible for AI to understand body language.
+
+      I suspect the answer to this is in the formal definition of "parse", in which case parsing requires a formal grammar without ambiguity. In this definition, natural language cannot be parsed, because it need not conform to any grammar.
+
+      Many expressions in C and C++ can also not be parsed under this definition. For example, the `*` symbol is ambiguous.
