Add AFI problem 11.14.7

--- a/Code/Algorithms/Books/AlgorithmsForInterviews/11h_programming_language-implementation.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/11h_programming_language-implementation.yml
@@ -82,3 +82,12 @@ notes:
       What is automatic garbage collection, and how is it implemented?
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 95.
+
+
+- fields:
+    Front: |
+      ## 11.14.07: Programming Language Implementation
+
+      What is a type-safe language?
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 95.
