Add AFI problem 11.14.8

--- a/Code/Algorithms/Books/AlgorithmsForInterviews/11h_programming_language-implementation.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/11h_programming_language-implementation.yml
@@ -91,3 +91,12 @@ notes:
       What is a type-safe language?
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 95.
+
+
+- fields:
+    Front: |
+      ## 11.14.08: Programming Language Implementation
+
+      What is the difference between a lexer and a parser?
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 95.
